# agent-lsp-real-inspect

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  pyproject.toml  server.json
.cursor/: environment.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  mcp-assert.yml  npm-republish.yml  release.yml
.polywave-state/: active-impl  gate-cache.json
.polywave-state/wave1/: branch-refs.json  prepare-result.json
.polywave-state/wave1/agent-A/: .polywave-ownership.json  brief.md
.polywave-state/wave2/: branch-refs.json  prepare-result.json
.polywave-state/wave2/agent-C/: cursor.json
assets/: download-stats.cache  downloads-badge.json
cmd/agent-lsp/: server.go
docs/: CONTEXT.md  gcf-integration.md  index.md
docs/IMPL/: IMPL-gcf-graph-encoding.yaml  IMPL-gcf-tabular-encoding.yaml
docs/IMPL/.polywave-state/gcf-graph-encoding/wave2/: merge-log.json
docs/IMPL/.polywave-state/gcf-tabular-encoding/wave1/: merge-log.json
docs/IMPL/.polywave-state/gcf-tabular-encoding/wave2/: merge-log.json
docs/IMPL/complete/: IMPL-gcf-graph-encoding.yaml  IMPL-gcf-tabular-encoding.yaml
docs/adr/: 0000-template.md  0001-fastmcp-scout-rewrite.md  0001-task-based-async-scout.md  0002-embedded-sqlite-task-store.md  0003-reject-fastmcp-docket-as-queue.md  0004-rust-pyo3-taskstore.md  0005-fastmcp-scout-stack.md  0006-git-worktree-gix.md  0007-session-held-containers.md  0008-coverage-median-split.md  0009-lsp-cache-volumes-and-warm-index.md  0010-workspace-deps-and-runtime-versions.md  0011-local-git-mirrors.md  0012-runtime-health-worker.md  README.md
docs/architecture/: FEATURES.md  OVERVIEW.md  agent-evaluations.md  architecture.md  c4.md  ci-notes.md  distribution.md  roadmap.md
docs/getting-started/: installation.md  mcp-clients.md  quickstart.md  troubleshooting.md
docs/guide/: common-workflows.md  coverage.md  gcf-integration.md  lsp-cache-and-indexing.md  mirrors.md  phase-enforcement.md  pypi-release.md  runbook-solo.md  runbook-with-vmcp.md  skills.md  speculative-execution.md  tasks.md  token-savings.md  workspace-deps-validation.md  workspace-deps.md
docs/reference/: env-vars.md  language-support.md  lsp-conformance.md  tools.md
infra/deploy/: README.md  env.example
infra/deploy/caddy/: Caddyfile
infra/deploy/scripts/: bootstrap.sh
infra/deploy/systemd/: agent-lsp-runtime-worker.service  agent-lsp.service  caddy.service.d-override.conf
infra/docker/lsp/: .dockerignore  Makefile  README.md  build.sh  docker-compose.yml
infra/docker/lsp/common/: stdio_tcp_bridge.py
infra/docker/lsp/cpp/: Dockerfile
infra/docker/lsp/go/: Dockerfile
infra/docker/lsp/python/: Dockerfile
infra/docker/lsp/rust/: Dockerfile
infra/docker/lsp/typescript/: Dockerfile
infra/mirrors/: REQUEST.template.md  mirrors.toml
infra/requests/: README.md  explore.template.md  impact.template.md  mirror.template.md  onboard.template.md  safe-edit.template.md  verify.template.md
infra/vmcp/: README.md  registry.agent-lsp.json
infra/vmcp/specs/: agent-lsp.json
internal/config/: parse_test.go
internal/encoding/gcf/: encode.go  encode_test.go  graph.go  graph_test.go
internal/lsp/: client.go  daemon.go  daemon_broker.go  java_runtimes.go  manager.go  procattr_windows.go  process_alive_unix.go  process_alive_windows.go  stop_daemon_unix.go  stop_daemon_windows.go  uri_helpers.go  uri_helpers_test.go
internal/resources/: resources.go
internal/session/: coverage_boost_test.go  differ_extended_test.go  edge_cases_test.go  final_coverage_test.go  manager_extended_test.go
internal/tools/: analysis.go  build.go  callhierarchy.go  capabilities.go  change_impact.go  change_impact_test.go  coverage_round3_test.go  coverage_round9_test.go  cross_repo.go  cross_repo_test.go  detect.go  detect_changes.go  detect_changes_test.go  documentation.go  explore.go  explore_test.go  helpers.go  helpers_test.go  highlights.go  inlayhints.go  navigation.go  safe_edit.go  semantic_tokens.go  session.go  session_test.go  simulation.go  symbol_path.go  symbol_source.go  typehierarchy.go  typehierarchy_test.go  workspace.go  workspace_folders.go
internal/uri/: uri.go  uri_test.go
python/agent_lsp/: __init__.py  _version.py  blast.py  client_compat.py  client_middleware.py  deps.py  env_layout.py  lsp_client.py  lsp_settings.py  mirrors.py  paths.py  prompts.py  runtime_hub.py  runtimes.py  server.py  task_bridge.py  worker.py
python/agent_lsp_docker/: __init__.py  _native.py
python/agent_lsp_git/: __init__.py  _native.py
python/agent_lsp_state/: __init__.py  _native.py
scripts/: c4_local_onboard_blast.py  client_multi_onboard.py  client_prod_smoke.py  client_vmcp_onboard.py  cursor-install.sh  mirror-sync.py  python-coverage.sh  release-set-version.sh  rust-coverage.sh  verify_runbook.sh
skills/lsp-explore/: SKILL.md
skills/lsp-impact/: SKILL.md
skills/lsp-mirror/: SKILL.md
skills/lsp-onboard/: SKILL.md
skills/lsp-refactor/: SKILL.md
skills/lsp-safe-edit/: SKILL.md
skills/lsp-verify/: SKILL.md
src/: lib.rs
tests/: smoke_pypi.py  test_cli_entrypoint.py  test_client_compat.py  test_coverage_boost.py  test_coverage_deps_runtime.py  test_deps_and_versions.py  test_hot_swap_runtime.py  test_mirrors.py  test_more_unit.py  test_native.py  test_prompts.py  test_security_fixes.py  test_server_flow.py  test_stdio_tcp_bridge.py  test_tasks.py  test_unit.py
