[package]
name = "agent-lsp-core"
version = "0.1.0"
edition = "2021"
description = "Rust TaskStore (rusqlite) exposed to Python via PyO3"
license = "MIT"
publish = false

[lib]
name = "_tasks"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29" }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
# Internal crates — shipped inside the single root wheel (no separate PyPI dists).
agent-lsp-state = { path = "packages/agent-lsp-state", default-features = false }
agent-lsp-git = { path = "packages/agent-lsp-git", default-features = false }
agent-lsp-docker = { path = "packages/agent-lsp-docker", default-features = false }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize"] }
tempfile = "3"
