[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "agent-lsp"
version = "0.1.7"
description = "Scout LSP MCP — FastMCP + Rust/PyO3 (tasks, sessions, worktrees, blast_radius)"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [{ name = "hewimetall" }]
keywords = ["mcp", "lsp", "fastmcp", "scout", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp[tasks]>=2.0",
    "pydantic>=2.12",
]

[project.urls]
Homepage = "https://github.com/hewimetall/agent-lsp-real-inspect"
Repository = "https://github.com/hewimetall/agent-lsp-real-inspect"
Issues = "https://github.com/hewimetall/agent-lsp-real-inspect/issues"
Documentation = "https://github.com/hewimetall/agent-lsp-real-inspect/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.12",
    "mypy>=1.16",
    "maturin>=1.8,<2",
]

[project.scripts]
agent-lsp = "agent_lsp.server:main"
# On tag release, scripts/release-set-version.sh renames the dist to
# agent-lsp-real-inspect-mcp and adds a matching console script for uvx.

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "agent_lsp._tasks"
# Include internal Rust crates in the sdist so path deps resolve on build.
include = [
    "packages/agent-lsp-state/**/*",
    "packages/agent-lsp-git/**/*",
    "packages/agent-lsp-docker/**/*",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python", "tests"]
extend-exclude = ["target", ".venv", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["agent_lsp", "agent_lsp_state", "agent_lsp_git", "agent_lsp_docker"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = "python"
packages = ["agent_lsp", "agent_lsp_state", "agent_lsp_git", "agent_lsp_docker"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "agent_lsp._tasks",
    "agent_lsp_state._native",
    "agent_lsp_git._native",
    "agent_lsp_docker._native",
    "fastmcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "docker: tests that need a Docker daemon",
]
addopts = ["-q"]
pythonpath = ["python"]

[tool.coverage.run]
branch = false
source = ["agent_lsp", "agent_lsp_state", "agent_lsp_git", "agent_lsp_docker"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
