[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "agent-lsp"
version = "0.1.7"
description = "Scout LSP MCP — FastMCP + Rust/PyO3 (tasks, sessions, worktrees, blast_radius)"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [{ name = "hewimetall" }]
keywords = ["mcp", "lsp", "fastmcp", "scout", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp[tasks]>=2.0",
    "pydantic>=2.12",
]

[project.urls]
Homepage = "https://github.com/hewimetall/agent-lsp-real-inspect"
Repository = "https://github.com/hewimetall/agent-lsp-real-inspect"
Issues = "https://github.com/hewimetall/agent-lsp-real-inspect/issues"
Documentation = "https://github.com/hewimetall/agent-lsp-real-inspect/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.12",
    "mypy>=1.16",
    "maturin>=1.8,<2",
]

[project.scripts]
agent-lsp = "agent_lsp.server:main"
# On tag release, scripts/release-set-version.sh renames the dist to
# agent-lsp-real-inspect-mcp and adds a matching console script for uvx.

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "agent_lsp._tasks"
# Path-deps under packages/ are pulled into the sdist by maturin automatically.
# Do NOT glob-include packages/** — that pulls target/ junk into the wheel.

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python", "tests"]
extend-exclude = ["target", ".venv", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["agent_lsp"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = "python"
packages = ["agent_lsp"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "agent_lsp._tasks",
    "fastmcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "docker: tests that need a Docker daemon",
]
addopts = ["-q"]
pythonpath = ["python"]

[tool.coverage.run]
branch = false
source = ["agent_lsp"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
